<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="279dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lay3"
        tools:srcCompat="@drawable/lay3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:layout_marginBottom="600dp"
        android:text="@string/geokvantum_subject"
        android:textColor="#99AADF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="91dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/geokvantum1"
        tools:srcCompat="@drawable/geokvanticon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="366dp"
        android:layout_height="87dp"
        android:layout_marginTop="26dp"
        android:justificationMode="inter_word"
        android:text="@string/geokvantum_text"
        android:textColor="#AACBE1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:id="@+id/timetable"
        android:layout_width="409dp"
        android:layout_height="450dp"
        android:layout_marginTop="1dp"
        android:stretchColumns="1, 2, 3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TableRow
            android:id="@+id/title_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:text="@string/group"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/weekday"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:text="@string/time"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>